test/errors/e46.gm
Procedure test_nested_sum(G:Graph)
{
    Graph G2;
    //must not compile since default grah is not well-defined
    Node_Set set;
}
